--- a/.github/workflows/merge-translations.yml
+++ b/.github/workflows/merge-translations.yml
@@ -1,9 +1,9 @@
-name: Merge Translations
+name: Merge and Deploy Translations
 
 on:
   push:
     branches:
-      - main  # Change this to your target branch
+      - main  # Change this if using a different branch
 
 jobs:
   merge-translations:
@@ -34,6 +34,8 @@ jobs:
           done
 
       - name: Commit and push changes
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
