Aggiungi un punto esclamativo al commento del branch nel workflow di fusione delle traduzioni

--- a/.github/workflows/merge-translations.yml
+++ b/.github/workflows/merge-translations.yml
@@ -3,7 +3,7 @@ name: Merge and Deploy Translations
 on:
   push:
     branches:
-      - main  # Change this if using a different branch
+      - main  # Change this if using a different branch!
 
 jobs:
   merge-translations:
