Aggiungi branch 'staging' e 'internal' al workflow di fusione delle traduzioni

--- a/.github/workflows/merge-translations.yml
+++ b/.github/workflows/merge-translations.yml
@@ -3,7 +3,9 @@ name: Merge and Deploy Translations
 on:
   push:
     branches:
-      - main  # Change this if using a different branch!
+      - main
+      - staging
+      - internal
 
 jobs:
   merge-translations:
